--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,10 +21,9 @@ body {
 main {
     position: relative;
     height: 100vh;
-    
 }
 
-section#telefone {
+#telefone {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -33,7 +32,13 @@ section#telefone {
 
     height: 627px;
     width: 311px;
-    
     background: url('../imagens/frame-iphone.png') no-repeat;
-    
+}
+
+iframe#tela {
+    position: relative;
+    top: 79px;
+    left: 21px;
+    width: 269px;
+    height: 476px;
 }
